--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "babel-preset-es2015": "^6.11.4",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.11.4",
+    "css-loader": "^1.0.0",
     "prismjs": "^1.15.0",
+    "raw-loader": "^0.5.1",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "spectacle": "^5.0.0"
+    "spectacle": "^5.0.0",
+    "style-loader": "^0.22.1"
   }
 }
