--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lodash.clamp": "^4.0.1",
     "lodash.memoize": "^4.0.1",
     "lodash.padstart": "^4.2.0",
+    "lodash.flatten": "^3.2.0",
+    "lodash.range": "^4.2.0",
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
