--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
+    "react": "^16.4.0",
     "spectacle": "^1.0.4"
   },
   "devDependencies": {
@@ -35,8 +35,8 @@
     "css-loader": "^1.0.0",
     "prismjs": "^1.15.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "spectacle": "^5.0.0",
     "style-loader": "^0.22.1"
   }
